the_project/manifests/todo-back-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-back
  namespace: project
spec:
  selector:
    matchLabels:
      app: todo-back
  template:
    metadata:
      labels:
        app: todo-back
    spec:
      containers:
        - name: todo-front
          image: ahmedevops/todo-backend:2.2
