the_project/manifests/todo-back-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-back-svc
spec:
  type: ClusterIP
  selector:
    app: todo-back
  ports:
    - port: 8090
      targetPort: 8090
