the_project/manifests/todo-front-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-service
spec:
  type: ClusterIP
  selector:
    app: todo-front
  ports:
    - port: 80
      targetPort: 8080
